messing with preferences; added console screenshot